<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="Autofill,LabelFor" />


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/grey"
        android:inputType="phone"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/textPostalAddress"
        android:textColor="@color/grey"
        android:inputType="textPostalAddress"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editTextTextPostalAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editTextTextPostalAddress3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        tools:ignore="Autofill,LabelFor" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/textEmailAddress"
        android:textColor="@color/grey"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/grey"
        android:text="@string/number"
        android:inputType="number" />

    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>